--- a/index.html
+++ b/index.html
@@ -3,9 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Phudu:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <title>Sumatoha</title>
 </head>
+
 <body>
+    <header class="header">
+        <nav class="headerWrapper">
+            <a href="https://vk.com/kseroks.draw" target="_blank" class="headerTitle">Sumatoha</a>
+        </nav>
+    </header>
+
+
+ <!-- <main class="main">
+    <div class="card">
+        <a class="cardTitle1">такое</a>
+        <img src="https://sun9-10.userapi.com/impg/lGXJbyPDscft0AmKSFaZc3z4ASCYmy_7JYKzRw/QDKVCzAwCus.jpg?size=810x1080&quality=96&sign=3e6ddef61d8355869f426be7944be0bc&type=album" alt="" class="img">
+    </div>
+    <div class="card">
+        <a class="cardTitle2">сякое</a>
+    </div>
+    <div class="card">
+        <a class="cardTitle3">третье</a>
+        <img src="https://sun9-32.userapi.com/impg/X4jDgtBcWsiMzsBIqX76eVEWtUeRUfEb3DCdnQ/f9XHF4UDVag.jpg?size=722x1028&quality=96&sign=e4d031210d8854f713cff8189d17d73b&type=album" alt="" class="img">
+    </div>
+    <div class="card">
+        <a class="cardTitle4">пятое</a>
+    </div>
+    <div class="card">
+        <a class="cardTitle5">десятое</a>
+    </div>
+ </main> -->
+
+<main class="main">
+    <nav class="card">
+        <p class="cardTitle">kartinka</p>
+        <img src="https://sun9-10.userapi.com/impg/lGXJbyPDscft0AmKSFaZc3z4ASCYmy_7JYKzRw/QDKVCzAwCus.jpg?size=810x1080&quality=96&sign=3e6ddef61d8355869f426be7944be0bc&type=album" alt="" class="img">
+    </nav>
+    <nav class="card">
+        <p class="cardTitle">kartinka</p>
+    </nav>
+    <nav class="card">
+        <p class="cardTitle">kartinka</p>
+        <img src="https://sun9-32.userapi.com/impg/X4jDgtBcWsiMzsBIqX76eVEWtUeRUfEb3DCdnQ/f9XHF4UDVag.jpg?size=722x1028&quality=96&sign=e4d031210d8854f713cff8189d17d73b&type=album" alt="" class="img">
+    </nav>
+    <nav class="card">
+        <p class="cardTitle">kartinka</p>
+    </nav>
+    <nav class="card">
+        <p class="cardTitle">kartinka</p>
+    </nav>
+</main>
+
+ <button class="button">
+    <nav class="buttonWrap"><a href="" class="buttonTitle">кнопка1</a></nav>
+    <nav class="buttonWrap"><a href="" class="buttonTitle">кнопка2</a></nav>
+    <nav class="buttonWrap"><a href="" class="buttonTitle">кнопка3</a></nav>
+    <nav class="buttonWrap"><a href="" class="buttonTitle">кнопка4</a></nav>
+    <nav class="buttonWrap"><a href="" class="buttonTitle">кнопка5</a></nav>
+ </button>
+
+ <!-- <button class="button">
+    <nav class="buttonWrap">
+        <p class="buttonTitle">blen</p>
+    </nav>
+    <nav class="buttonWrap">
+        <p class="buttonTitle">v</p>
+    </nav>
+    <nav class="buttonWrap">
+        <p class="buttonTitle">chem</p>
+    </nav>
+    <nav class="buttonWrap">
+        <p class="buttonTitle">je</p>
+    </nav>
+    <nav class="buttonWrap">
+        <p class="buttonTitle">problema</p>
+    </nav>
+ </button> -->
+
+ <Box class="box">
+    <div class="boxSmall"></div>
+ </Box>
+
+ <footer class="footer">
+    <a class="footerTitle">2023</a>
+    <a class="footerTitle">by Kseni Ku</a>
+ </footer>
+
+
     
 </body>
 </html>
